// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"typedoc-stubs • [Readme](../index.md) \\| [Documentation](../exports.md)

***

# Interface: BasicInterface

Comments for BasicInterface

## Contents

- [Extended By](BasicInterface.md#extended-by)
- [Properties](BasicInterface.md#properties)
  - [functionProp](BasicInterface.md#functionprop)
  - [optionalProp](BasicInterface.md#optionalprop)
  - [prop](BasicInterface.md#prop)
  - [propWithProps](BasicInterface.md#propwithprops)

## Extended By

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

### functionProp

> **functionProp**: (\`s\`) => \`boolean\`

Comments for functionProper

#### Parameters

▪ **s**: \`string\`

Comment for param s

#### Returns

\`boolean\`

#### Source

[interfaces.ts:25](http://source-url)

***

### optionalProp

> **optionalProp**?: \`string\`

Comments for optional prop

#### Source

[interfaces.ts:19](http://source-url)

***

### prop

> **prop**: \`string\`

Comments for prop

#### Source

[interfaces.ts:14](http://source-url)

***

### propWithProps

> **propWithProps**: \`object\`

Comments for propWithProps

#### Type declaration

##### callbacks

> **callbacks**?: \`Partial\`\\< [\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\< [\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md) \\> \\>

Comments for callbacks

##### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

##### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

##### nestedPropC

> **nestedPropC**: \`object\`

Comments for nestedPropC

##### nestedPropC.nestedPropCA

> **nestedPropC.nestedPropCA**: \`string\`

Comments for nestedPropCA

##### nestedPropD

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

###### Returns

\`boolean\`

#### Source

[interfaces.ts:30](http://source-url)
"
`;

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"typedoc-stubs • [Documentation](../index.md)

***

# BasicInterface

Comments for BasicInterface

## Contents

- [Extended By](BasicInterface.md#extended-by)
- [Properties](BasicInterface.md#properties)

## Extended By

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`functionProp\` | (\`s\`) => \`boolean\` | - |
| \`optionalProp\`? | \`string\` | Comments for optional prop |
| \`prop\` | \`string\` | Comments for prop |
| \`propWithProps\` | \\{   \`callbacks\`: \`Partial\`\\< [\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\< [\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md) \\> \\>;   \`nestedPropA\`: \`string\`;   \`nestedPropB\`: \`boolean\`;   \`nestedPropC\`: \\{      \`nestedPropCA\`: \`string\`;   };   \`nestedPropD\`: () => \`boolean\`;   } | Comments for propWithProps |
| \`propWithProps.callbacks\`? | \`Partial\`\\< [\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\< [\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md) \\> \\> | Comments for callbacks |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB |
| \`propWithProps.nestedPropC\` | \\{   \`nestedPropCA\`: \`string\`;   } | Comments for nestedPropC |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | - |
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"typedoc-stubs • [Readme](../index.md) \\| [Documentation](../exports.md)

***

# Interface: ExtendedInterface

Comments for ExtendedInterface

## Contents

- [Extends](ExtendedInterface.md#extends)
- [Properties](ExtendedInterface.md#properties)
  - [extendedProp](ExtendedInterface.md#extendedprop)
  - [functionProp](ExtendedInterface.md#functionprop)
  - [optionalProp](ExtendedInterface.md#optionalprop)
  - [prop](ExtendedInterface.md#prop)
  - [propWithProps](ExtendedInterface.md#propwithprops)

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

### extendedProp

> **extendedProp**: \`string\`

#### Source

[interfaces.ts:73](http://source-url)

***

### functionProp

> **functionProp**: (\`s\`) => \`boolean\`

Comments for functionProper

#### Parameters

▪ **s**: \`string\`

Comment for param s

#### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface.functionProp\`](BasicInterface.md#functionprop)

#### Source

[interfaces.ts:25](http://source-url)

***

### optionalProp

> **optionalProp**?: \`string\`

Comments for optional prop

#### Inherited from

[\`BasicInterface.optionalProp\`](BasicInterface.md#optionalprop)

#### Source

[interfaces.ts:19](http://source-url)

***

### prop

> **prop**: \`string\`

Comments for prop

#### Inherited from

[\`BasicInterface.prop\`](BasicInterface.md#prop)

#### Source

[interfaces.ts:14](http://source-url)

***

### propWithProps

> **propWithProps**: \`object\`

Comments for propWithProps

#### Type declaration

##### callbacks

> **callbacks**?: \`Partial\`\\< [\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\< [\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md) \\> \\>

Comments for callbacks

##### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

##### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

##### nestedPropC

> **nestedPropC**: \`object\`

Comments for nestedPropC

##### nestedPropC.nestedPropCA

> **nestedPropC.nestedPropCA**: \`string\`

Comments for nestedPropCA

##### nestedPropD

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

###### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface.propWithProps\`](BasicInterface.md#propwithprops)

#### Source

[interfaces.ts:30](http://source-url)
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"typedoc-stubs • [Documentation](../index.md)

***

# ExtendedInterface

Comments for ExtendedInterface

## Contents

- [Extends](ExtendedInterface.md#extends)
- [Properties](ExtendedInterface.md#properties)

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

| Property | Type | Description | Inheritance |
| :------ | :------ | :------ | :------ |
| \`extendedProp\` | \`string\` | - | - |
| \`functionProp\` | (\`s\`) => \`boolean\` | - | [\`BasicInterface.functionProp\`](BasicInterface.md) |
| \`optionalProp\`? | \`string\` | Comments for optional prop | [\`BasicInterface.optionalProp\`](BasicInterface.md) |
| \`prop\` | \`string\` | Comments for prop | [\`BasicInterface.prop\`](BasicInterface.md) |
| \`propWithProps\` | \\{   \`callbacks\`: \`Partial\`\\< [\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\< [\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md) \\> \\>;   \`nestedPropA\`: \`string\`;   \`nestedPropB\`: \`boolean\`;   \`nestedPropC\`: \\{      \`nestedPropCA\`: \`string\`;   };   \`nestedPropD\`: () => \`boolean\`;   } | Comments for propWithProps | [\`BasicInterface.propWithProps\`](BasicInterface.md) |
| \`propWithProps.callbacks\`? | \`Partial\`\\< [\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\< [\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md) \\> \\> | Comments for callbacks | - |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA | - |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB | - |
| \`propWithProps.nestedPropC\` | \\{   \`nestedPropCA\`: \`string\`;   } | Comments for nestedPropC | - |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA | - |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | - | - |
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"typedoc-stubs • [Readme](../index.md) \\| [Documentation](../exports.md)

***

# Interface: IndexableInterface

Comments for IndexableInterface

## Contents

- [Indexable](IndexableInterface.md#indexable)
- [Properties](IndexableInterface.md#properties)
  - [prop](IndexableInterface.md#prop)

## Indexable

 \\[\`s\`: \`string\`\\]: \`string\`

## Properties

### prop

> **prop**: \`string\`

#### Source

[interfaces.ts:81](http://source-url)
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"typedoc-stubs • [Documentation](../index.md)

***

# IndexableInterface

Comments for IndexableInterface

## Contents

- [Indexable](IndexableInterface.md#indexable)
- [Properties](IndexableInterface.md#properties)

## Indexable

 \\[\`s\`: \`string\`\\]: \`string\`

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"typedoc-stubs • [Readme](../index.md) \\| [Documentation](../exports.md)

***

# Interface: InterfaceWithTypeParameters\\<A\\>

Comments for InterfaceWithTypeParameters

## Contents

- [Type parameters](InterfaceWithTypeParameters.md#type-parameters)
- [Properties](InterfaceWithTypeParameters.md#properties)
  - [prop](InterfaceWithTypeParameters.md#prop)

## Type parameters

▪ **A**

## Properties

### prop

> **prop**: \`A\`

Comments for prop

#### Source

[interfaces.ts:66](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"typedoc-stubs • [Documentation](../index.md)

***

# InterfaceWithTypeParameters\\<A\\>

Comments for InterfaceWithTypeParameters

## Contents

- [Type parameters](InterfaceWithTypeParameters.md#type-parameters)
- [Properties](InterfaceWithTypeParameters.md#properties)

## Type parameters

| Parameter |
| :------ |
| \`A\` |

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`A\` | Comments for prop |
"
`;
